Grid: Imrpve menugrid CSS to avoid shifting of table header text when switching from not-sorted to sorted state.

--- a/grid-spf/menugrid.css
+++ b/grid-spf/menugrid.css
@@ -3,14 +3,18 @@
 	cursor: default;
 }
 .menugrid thead th .ui-icon {
-	display: none;
+	visibility: hidden;
+	display: inline-block;
 	height: 12px;
 }
+.menugrid thead th .ui-icon-desc {
+	margin-left: -17px;
+}
 .menugrid thead th.sorted .ui-icon-asc {
-	display: inline-block;
+	visibility: visible;
 }
 .menugrid thead th.sorted-desc .ui-icon-desc {
-	display: inline-block;
+	visibility: visible;
 }
 .menugrid tfoot td {
 	text-align: center;
